# OrchestML

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
composureboard/: README.md  package.json  test-requirements.md
composureboard/src/: App.jsx  mockData.js  styles.css
composureboard/src/components/: AlternativeSelector.jsx  CompositionSection.jsx  ConfirmationPanel.jsx  ExportPanel.jsx  FileUploadArea.jsx  Header.jsx  ServiceNode.jsx
composureboard/src/config/: constants.js
composureboard/src/utils/: apiService.js  layoutUtils.js  serviceUtils.js
examples/: turtlebot.md
jenkins/: Jenkinsfile
monitoring-service/: data_processor.py  db_manager.py  monitoring_pipeline.py  pyproject.toml  test_pipeline.py
monitoring-service/data/: analyze_results.py  burger_mppi.yaml  collision_analysis.txt  collision_analyzer.py  default_nav.launch.py  navigation2_mppi.launch.py  overall_analysis.txt  run_nav_experiment.py  turtlebot3_office.world  turtlebot3_office_collision.world  turtlebot3_office_static.world  waffle_mppi.yaml
monitoring-service/data/collision_bags/: collision_analysis.json  dwb_run1_results.json  dwb_run2_results.json  dwb_run3_results.json  dwb_run4_results.json  dwb_run5_results.json  mppi_run1_results.json  mppi_run2_results.json  mppi_run3_results.json  mppi_run4_results.json  mppi_run5_results.json  navigation_results.csv
monitoring-service/data/collision_bags/dwb_run1_auto/: metadata.yaml
monitoring-service/data/collision_bags/dwb_run2_auto/: metadata.yaml
monitoring-service/data/collision_bags/dwb_run3_auto/: metadata.yaml
monitoring-service/data/static_bags/: collision_analysis.json  dwb_run1_results.json  dwb_run2_results.json  dwb_run3_results.json  dwb_run4_results.json  dwb_run5_results.json  mppi_run1_results.json  mppi_run2_results.json  mppi_run3_results.json  mppi_run4_results.json  mppi_run5_results.json
orchestrator/: Dockerfile  composition.py  langgraph.json  main.py  models.py  prompts.yaml  pyproject.toml  test_confirmation_endpoints.py
repository-service/: Dockerfile  README.md  main.py  pyproject.toml  vectorstore.py
repository-service/data/services/: mobilevit-small.md  swinv2-tiny-patch4-window16-256.md  vit-face-expression.md
repository-service/data/services/github/: face_recog.md
repository-service/data/services/huggingface/: resnet-18.md  rtdetr_r18vd.md  yolov10n.md  yolov10s.md
src/composureci/: __init__.py
(+25 files in other folders)
