[project]
name = "composureci"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Arogya Kharel", email = "25946015+gurkhaman@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
]

[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"
