[project]
name = "orchestrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.74",
    "langchain-ollama>=0.3.7",
    "langchain-openai>=0.3.31",
    "langgraph>=0.6.7",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "langgraph-cli[inmem]>=0.4.2",
    "langgraph-prebuilt>=0.6.4",
    "langgraph-sdk>=0.2.6",
    "langsmith>=0.4.19",
    "notebook>=7.4.5",
    "tavily-python>=0.7.11",
    "trustcall>=0.0.39",
    "wikipedia>=1.4.0",
]
